2014-03-26  Darshit Shah  <darnir@gmail.com>

	* ftp.c (getftp): Rearrange parameters to fix compiler warning
	* utils.c (get_dir_matches_p): Do not pass a const char** to a function that
	expects char**

2014-03-25  Daniel Stenberg  <daniel@haxx.se>

	* url.c (shorten_length): Remove unused function.

2014-03-19  Yousong Zhou  <yszhou4tech@gmail.com>

	* init.c, main.c, options.h: Add option --start-pos for specifying
	start position of a download.
	* http.c: Utilize opt.start_pos for HTTP download.
	* ftp.c: Utilize opt.start_pos for FTP retrieval.

2014-03-04  Giuseppe Scrivano  <gscrivan@redhat.com>

	* http.c (modify_param_value, extract_param): Aesthetic change.

2014-02-14  Vladimír Pýcha  <vpycha@gmail.com> (tiny change)

	* http.c (parse_content_disposition, extract_param)
	(append_value_to_filename, digest_authentication_encode): URL-decode the
	filename parameter of Content-Disposition HTTP header if it is encoded. This
	is related to --content-disposition.
	New parameter of extract_param(), "is_url_encoded".
	Add argument NULL to the call of extract_param() in
	digest_authentication_encode().
	* http.h: Add the new parameter to the declaration of extract_param().
	* cookies.c (parse_set_cookie, test_cookies): Add argument NULL to the calls
	of extract_param().
	* url.c (url_unescape): Remove "static" modifier.
	* url.h: Add declaration of url_unescape().

2014-02-06  Giuseppe Scrivano  <gscrivan@redhat.com>

	* main.c (print_version): Move copyright year out of the localized
	string and update it.

2014-01-29  Darshit Shah  <darnir@gmail.com>

	* main.c: Remove pre-processor variable WHEN_DEBUG
	(option_data[]): Do not fail on --debug even if debug support is not
	compiled in.
	(main): Explicitly set opt.debug to false in case debugging support was not
	compiled.
	* init.c (commands[]): Support --debug wven when support is not compiled in.
	* options.h: Same

2014-01-17  Darshit Shah  <darnir@gmail.com>

	* init.c (commands[]): Add --no-config.